Fix text wrap

--- a/portfolio/src/app/contact/contact.component.scss
+++ b/portfolio/src/app/contact/contact.component.scss
@@ -29,6 +29,7 @@
       display: flex;
       gap: 10px;
       align-items: center;
+      text-wrap: nowrap;
 
       span {
         color: var(--accent-color);
@@ -51,7 +52,7 @@
       width: auto;
       justify-content: center;
     }
-    
+
     .img-holder {
       img {
         height: 440px;
